<resources>
    <string name="app_name">School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Project name</string>
    <string name="nav_header_subtitle">Arabic School</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">الرئيسية</string>
    <string name="menu_about_school">عن المدرسة</string>
    <string name="menu_slideshow">طاقم المعلمين</string>
    <string name="menu_tools">تواصل معنا</string>
    <string name="menu_share">تسجيل الدخول</string>
    <!--    <string name="menu_send">About Us</string>-->
    <string name="menu_about_us">من نحن</string>
    <string name="menu_add_new">اضافة خبر</string>
    <string name="menu_add_lesson">اضافة درس</string>
    <string name="menu_logout">تسجيل الخروج</string>

    <string name="project_name">project name</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">الايميل</string>
    <string name="prompt_password">كلمة المرور</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
