<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/about_school"
            android:title="@string/menu_about_school" />
        <item
            android:id="@+id/nav_teacher_staff"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_admin_login"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_add_new"
            android:title="@string/menu_add_new"
            android:visible="false"/>
        <item
            android:id="@+id/nav_add_lesson"
            android:title="@string/menu_add_lesson"
            android:visible="false"/>
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"
            android:visible="false"/>
    </group>

</menu>
