<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.school.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/about_school"
        android:name="com.example.school.ui.about_school.AboutSchoolFragment"
        android:label="@string/menu_about_school"
        tools:layout="@layout/fragment_about_school" />

    <fragment
        android:id="@+id/nav_teacher_staff"
        android:name="com.example.school.ui.teacher_staff.TeacherStaffFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_teacher_staff" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.school.ui.contact_us.ContactUsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_admin_login"
        android:name="com.example.school.ui.admin_login.AdminLoginFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_admin_login" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.school.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_add_new"
        android:name="com.example.school.ui.addNew.AddNewFragment"
        android:label="@string/menu_add_new"
        tools:layout="@layout/fragment_add_new" />

    <fragment
        android:id="@+id/nav_add_lesson"
        android:name="com.example.school.ui.addLesson.AddLessonFragment"
        android:label="@string/menu_add_lesson"
        tools:layout="@layout/fragment_add_lesson" />
</navigation>